--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.cmake
 *.dSYM
 *.exp
 *.la
@@ -16,31 +15,10 @@
 .dirstamp
 .done
 .libs
-Build
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache
 build
-compile
-confdefs.h
-config.*
-configure
-depcomp
-dist
-android-toolchain
-install-sh
-libtool
-ltmain.sh
-m4/argz.m4
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-src/shadowvpn
-src/crypto-perf
-missing
-stamp-h1
-tags
-test-driver
+Makefile
+CMakeFiles
+ShadowVPN
+CMakeCache.txt
+cmake_install.cmake
+config.h
