--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ compiler:
 
 
 before_script:
-  - sudo apt-get install -y libsodium
+  - git clone git://github.com/jedisct1/libsodium.git
+  - cd libsodium
+  - git checkout tags/1.0.0
+  - ./autogen.sh
+  - ./configure
+  - make check
+  - sudo make install
+  - cd ..
   - mkdir .build
   - cd .build
   - cmake ..
