fixed bug.  FreeBSD & Linux test ok.

--- a/samples/server.conf
+++ b/samples/server.conf
@@ -23,15 +23,20 @@ mtu=1440
 # tunnel device name
 intf=tun0
 
+tun_local_ip=10.7.0.1
+# if server mode tun_local_ip equal tun_remote_ip
+tun_remote_ip=10.7.0.1
+tun_netmask=255.255.255.0
+
 # the script to run after VPN is created
 # use this script to set up routes, NAT, etc
 # configuration in this file will be set as environment variables
-up=/etc/shadowvpn/server_up.sh
+up=./samples/freebsd/freebsd_server_up.sh
 
 # the script to run before stopping VPN
 # use this script to restore routes, NAT, etc
 # configuration in this file will be set as environment variables
-down=/etc/shadowvpn/server_down.sh
+down=./samples/freebsd/freebsd_server_down.sh
 
 # PID file path
 pidfile=/var/run/shadowvpn.pid
