改进cmake脚本中的对多平台的支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,28 @@ IF (WITH_DEBUG)
     SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")
 ENDIF ()
 
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    SET(TARGET_LINUX ON)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    SET(TARGET_DARWIN ON)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+    SET(TARGET_FREEBSD ON)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    SET(TARGET_WIN32 ON)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+
 INCLUDE_DIRECTORIES (
         ${CMAKE_CURRENT_SOURCE_DIR}/src
         ${CMAKE_CURRENT_BINARY_DIR}
     )
+
+ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
 CONFIGURE_FILE (
     "${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.in"
