--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6.0)
 
-PROJECT (ShadowVPN)
+PROJECT (shadowvpn)
 
 OPTION (WITH_DEBUG "debugging support" OFF)
 
 IF (WITH_DEBUG)
-    # gdb DEBUG
-    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -ggdb")
+    SET(CMAKE_BUILD_TYPE "Debug")
+    SET(CMAKE_C_FLAGS_DEBUG "-g -ggdb")
 ENDIF ()
 
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
@@ -47,7 +47,7 @@ SET (HDR
         ${CMAKE_CURRENT_SOURCE_DIR}/src/daemon.h
     )
 
-SET (SRC_ShadowVPN
+SET (SRC_SHADOWVPN
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
         ${CMAKE_CURRENT_SOURCE_DIR}/src/args.c
         ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto.c
@@ -61,9 +61,9 @@ SET (SRC_ShadowVPN
 SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
     "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 
-ADD_EXECUTABLE (ShadowVPN ${SRC_ShadowVPN} ${HDR})
+ADD_EXECUTABLE (shadowvpn ${SRC_SHADOWVPN} ${HDR})
 FIND_PACKAGE (LIBSODIUM  REQUIRED )
 INCLUDE_DIRECTORIES (${LIBSODIUM_INCLUDE_DIR} )
-TARGET_LINK_LIBRARIES (ShadowVPN ${LIBSODIUM_LIBRARIES})
+TARGET_LINK_LIBRARIES (shadowvpn ${LIBSODIUM_LIBRARIES})
 
-INSTALL(TARGETS ShadowVPN DESTINATION bin)
+INSTALL(TARGETS shadowvpn DESTINATION bin)
